--- a/ui/package.json
+++ b/ui/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blueprintjs/core": "^5.13.1",
+    "axios": "^1.7.7",
+    "blueprintjs": "^0.0.8",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "axios": "^1.7.7"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
