--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@blueprintjs/core": "^5.13.1",
     "axios": "^1.7.7",
     "blueprintjs": "^0.0.8",
+    "lightbox.js-react": "^1.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
