--- a/SPA-app-comments/appsettings.json
+++ b/SPA-app-comments/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=SPA-app-db;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "ApplicationDbContext": "Data Source=spadb;Initial Catalog=SPA-app-db;User Id=sa;Password=StrongP@ssw0rd!;Encrypt=False;Integrated Security=False"
   }
 }
